[tool.poetry]
name = "stuv"
version = "0.1.0"
description = ""
authors = ["Akihisa-Watanabe <akihisa20030102@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.13"
numpy = "^1.24.3"
pandas = "^2.0.2"
scikit-learn = "^1.2.2"
lightgbm = "^3.3.5"
matplotlib = "^3.7.1"
umap-learn = "^0.5.3"
imblearn = "^0.0"
torch = "^2.0.1"
pytorch-metric-learning = "^2.2.0"
seaborn = "^0.12.2"
h5py = "^3.9.0"
torchvision = "^0.15.2"
tqdm = "^4.65.0"
optuna = "^3.3.0"
llvmlite = "^0.40.1"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"
